--- a/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
+++ b/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 dir('Jenkins_Assignment_7/hello-springboot-app') {
                     echo 'Building Docker Image...'
-                    sh 'sudo docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
+                    sh 'sudo docker build -t shivachouhan/devops:hello-springboot-app_$BUILD_NUMBER .'
                 }
             }
         }
@@ -33,7 +33,7 @@ pipeline {
         stage('Push Image') {
             steps {
                 dir('Jenkins_Assignment_7/hello-springboot-app') {
-                    sh 'sudo docker push shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER'
+                    sh 'sudo docker push shivachouhan/devops:hello-springboot-app_$BUILD_NUMBER'
                 }
             }
         }
