--- a/.github/workflows/java-docker-k8s.yml
+++ b/.github/workflows/java-docker-k8s.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted
+    runs-on: [self-hosted, shivanad-chouhan-VirtualBox]  # Use a self-hosted runner with the specified label
 
     steps:
       - name: Checkout Code
