--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -35,13 +35,18 @@ phases:
       - cd Jenkins_Assignment_7/hello-springboot-app
       - mvn clean package
       - echo "Building Docker image..."
-      - docker build -t $REPOSITORY_NAME:latest .
-      - docker tag $REPOSITORY_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+      # - docker build -t $REPOSITORY_NAME:latest .
+      # - docker tag $REPOSITORY_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+
+      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$CODEBUILD_BUILD_ID .
 
   post_build:
     commands:
       - echo "Pushing Docker image to ECR..."
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+      # - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+      
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$CODEBUILD_BUILD_ID
+
       - echo "Configuring kubectl..."
       
       # - aws eks update-kubeconfig --name wonderful-rock-potato --region us-east-1
@@ -75,11 +80,11 @@ phases:
       
       
 
-artifacts:
-  files:
-    - Jenkins_Assignment_7/hello-springboot-app/target/*.jar
+# artifacts:
+#   files:
+#     - Jenkins_Assignment_7/hello-springboot-app/target/*.jar
 
-cache:
-  paths:
-    - '.m2/**/*'
-    - 'Jenkins_Assignment_7/hello-springboot-app/target/**/*'
+# cache:
+#   paths:
+#     - '.m2/**/*'
+#     - 'Jenkins_Assignment_7/hello-springboot-app/target/**/*'
