--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -8,7 +8,7 @@ env:
     EKS_CLUSTER_NAME: "wonderful-rock-potato"
     MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
-# phases:
+phases:
 #   install:
 #     runtime-versions:
 #       java: corretto17
