--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -27,7 +27,7 @@ phases:
       - cd Jenkins_Assignment_7/hello-springboot-app
       - mvn clean package
       - echo "Building Docker image with tag $DOCKER_TAG..."
-      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG .
+      - docker build -t hello-springboot-app:$DOCKER_TAG .
 
   post_build:
     commands:
