--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -36,11 +36,11 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG
       - echo "Configuring kubectl..."
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
-      # - echo "Updating deployment..."
-      # - kubectl set image deployment/hello-springboot-app hello-springboot-app=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG
       
       - echo "Making deployment..."
       - kubectl apply -f deployment.yaml
+      - echo "Updating deployment..."
+      - kubectl set image deployment/hello-springboot-app hello-springboot-app=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG
 
       - echo "Verifying deployment..."
       - kubectl get deployments
