--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -31,7 +31,7 @@ phases:
 
   post_build:
     commands:
-      - cd Jenkins_Assignment_7/hello-springboot-app
+      - pwd
       - echo "Pushing Docker image to ECR..."
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG
       - echo "Configuring kubectl..."
