--- a/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: hello-springboot-app
         image: hello-springboot-app:latest
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
