--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -45,6 +45,6 @@ phases:
       - echo "Verifying deployment..."
       - kubectl get pods
       - kubectl get svc hello-springboot-app-service
-      - echo "Service URL:"
-      - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+      # - echo "Service URL:"
+      # - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
 
