--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -43,8 +43,7 @@ phases:
       - kubectl set image deployment/hello-springboot-app hello-springboot-app=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$DOCKER_TAG
       - kubectl rollout status deployment/hello-springboot-app --timeout=60s
       - echo "Verifying deployment..."
-      - kubectl get pods
-      - kubectl get svc hello-springboot-app-service
+      - kubectl get deployments
       # - echo "Service URL:"
       # - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
 
