sonar_coverage_report

--- a/SonarQube_Assignment_10/python_sonar_jenkins_project/Jenkinsfile
+++ b/SonarQube_Assignment_10/python_sonar_jenkins_project/Jenkinsfile
@@ -2,31 +2,33 @@ pipeline {
     agent any
 
     environment {
-        SONAR_SCANNER_HOME = tool 'Sonar_5'  // Ensure this tool is configured
+        SONAR_SCANNER_HOME = tool 'SonarQubeScanner-7.1.0.4889'  // Ensure this tool is configured
     }
 
     stages {
         stage('Setup Python Virtual Env') {
             steps {
-                sh '''
-                    python3 -m venv venv
-                    . venv/bin/activate
-                    pip install --upgrade pip
-                    pip install pytest coverage
-                '''
+                dir('python_sonar_jenkins_project') {
+                    sh '''
+                        python3 -m venv venv
+                        source venv/bin/activate
+                        pip install --upgrade pip
+                        pip install pytest coverage
+                    '''
+                }
             }
         }
 
         stage('Run Tests and Generate Coverage') {
             steps {
-                sh '''
-                    . venv/bin/activate
-                    cd python_sonar_jenkins_project
-                    coverage erase
-                    coverage run -m pytest
-                    coverage xml
-                    sed -i 's|<source>.*</source>|<source>.</source>|g' coverage.xml
-                '''
+                dir('python_sonar_jenkins_project') {
+                    sh '''
+                        source venv/bin/activate
+                        coverage run -m pytest
+                        coverage report
+                        coverage xml
+                    '''
+                }
             }
         }
 
@@ -35,12 +37,11 @@ pipeline {
                 dir('python_sonar_jenkins_project') {
                     withSonarQubeEnv('Sonar_Local') {
                         sh '''
-                        . ../venv/bin/activate
-                        ${SONAR_SCANNER_HOME}/bin/sonar-scanner
+                            source venv/bin/activate
+                            ${SONAR_SCANNER_HOME}/bin/sonar-scanner
                         '''
+                    }
+                }
             }
         }
     }
-}
-}
-}
