--- a/Ansible_Assignment_12/first_pb.yaml
+++ b/Ansible_Assignment_12/first_pb.yaml
@@ -1,7 +1,15 @@
 ---
 - name: First Basic PB
-  hosts: localhost
+  hosts: all
+  become: true
 
   tasks:
-    - name: Test Connectivity
-      ping:
+    - name: install nginx
+      apt:
+        name: nginx
+        state: present
+    - name: starting the nginx service
+      service:
+        name: nginx
+        state: started
+        enabled: true
