--- a/Ansible_Assignment_12/site.yaml
+++ b/Ansible_Assignment_12/site.yaml
@@ -7,4 +7,8 @@
     - linux_patching
     - tomcat_install
     - dns_changes
+
+- name: Windows IIS_setup
+  hosts: windows
+  roles:
     - win_iis
