--- a/Ansible_Assignment_12/ec2.yaml
+++ b/Ansible_Assignment_12/ec2.yaml
@@ -26,7 +26,7 @@
       amazon.aws.ec2_instance:
         name: Automated-instance-terraform
         key_name: ansible_key
-        key_material: "{{ lookup('file', '/home/ubuntu/keys/ansible_key.pem') }}"
+        key_material: "{{ lookup('file', '/home/ubuntu/keys/ansible_key.pub') }}"
         instance_type: t2.micro
         image_id: ami-020cba7c55df1f615   # Ubuntu
         region: us-east-1
