--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -31,4 +31,6 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-        
+        with:
+          languages: java
+          paths: ./SonarQube_Assignment_10/hello-springboot-app
